[package]
name = "day8"
version = "0.1.0"
authors = ["Murray Rogers <murray.rogers@metaswitch.com>"]
edition = "2018"
publish = ["metaswitch"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
lazy_static = "1.4.0"
regex = "1"